# Scope

./: .directory  .gitignore  Cargo.toml  README.md  examples.sh  gendata.py  test.sh
color_set/: Cargo.toml  test.py
color_set/src/: lib.rs
command_parse/: Cargo.toml
command_parse/src/: lib.rs
glimput/: Cargo.toml
glimput/src/: lib.rs
resources/: cmdargs.yml
src/: README.md  command_parse.rs  drawstyles.rs  main.rs  signal.rs  ui.rs
